[metadata]
name = pyComChem
version = 0.2
url = https://github.com/stuchalk/pyComChem
author = 'Stuart Chalk'
author_email = 'schalk@unf.edu'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Python library for accessing the CommonChemistry.org API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7

[flake8]
 # add options

